test/files/neg/t7653b/B_2.scala
object Test {
  M.m.apply() // error in qualifier correctly reported
  M.m()       // but here it resulted in a NPE
}
